Fix text overflow issue with ellipsis

--- a/src/components/repository-grid/grid-item/styles.css
+++ b/src/components/repository-grid/grid-item/styles.css
@@ -29,6 +29,7 @@
   font-weight: 600;
   color: #6c7583;
   font-size: 14px;
+  width: 80%;
 }
 
 .grid-item-container .author-details a {
@@ -71,14 +72,24 @@
 }
 
 .grid-item-container .repo-name {
+  display: block;
   font-weight: 700;
-  word-wrap: break-all;
+  word-break: break-word;
+  width: 100%;
+}
+
+.grid-item-container .repo-name,
+.grid-item-container .author-details h5 {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .grid-item-container .repo-body p {
   font-size: 14px;
   margin-bottom: 0;
   color: #6e7583;
+  word-break: break-word;
 }
 
 .grid-item-container .repo-footer {
